--- a/home.css
+++ b/home.css
@@ -40,7 +40,7 @@ body{
 .logo-img{
     height: 120px;
     width: 120px;
-    background-image: url('/logo.png');
+    background-image: url('./logo.png');
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
