--- a/assets/css/itemShared.css
+++ b/assets/css/itemShared.css
@@ -1,4 +1,3 @@
-/* navbar */
 body{
     padding: 0;
     margin : 0;
@@ -9,105 +8,6 @@ body{
     flex-direction: column;
     overflow-x: hidden;
 }
-.nav-bar{
-    height: 10%;
-    width: 100%;
-    background-color: #95b1a7;
-    color: white;
-    display: flex;
-/*    font-size: medium;*/
-    font-weight: normal;
-}
-.no-collapse,.myCollapse{
-    display: flex;  
-}
-.no-collapse{
-    width: 65%;
-    justify-content: left;
-    padding-left: 10px;
-}
-.myCollapse{
-    width: 35%;
-    justify-content: right;
-    padding-right: 10px;
-}
-.logo{
-    margin: 2px;
-    height: 20;
-    width: 3rem;
-}
-.nav-share, .nav-explore, .nav-about, .nav-contact{
-    height: fit-content;
-    font-size: large;
-    color: white;
-    text-decoration: none;
-    margin: 10px 30px 10px 30px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-.nav-share:hover, .nav-explore:hover, .nav-about:hover, .nav-contact:hover{
-/*    text-decoration: underline;*/
-	font-size:larger;
-/*	margin :10px 2px 2px  10px;*/
-    color: #495c54;
-}
-.search-bar{
-    width: 100%;
-    height: 100%;
-}
-.search-bar-inner{
-    width:80%;
-    height: 100%;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-}
-.search-box{
-    height: 70%;
-    width:88%;
-    border: none;
-    border-radius: 10px;
-    margin: 8px;
-    display: flex;
-    justify-content: flex-start;
-}
-.search-button{
-    margin: 8px;
-    height: 70%;
-    width: 12%;
-    font-size: x-large;
-    border: none;
-    color: white;
-    border-radius: 10px;
-    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.3);
-    background-color: #566c63;
-}
-.search-button:hover{
-    background-color: #495c54;
-    cursor: pointer;
-}
-.nav-profile{
-    height: 3rem;
-    width: 3rem;
-    background-color: red;
-    border-radius: 50%;
-}
-.lgn-sgn{
-    font-size: larger;
-    margin-top: 10px;
-    position: absolute;
-}
-.lgn-sgn a{
-    font-weight: bold;
-    text-decoration: underline;
-    color: white;
-}
-.lgn-sgn a:hover{
-    color: #566c63;
-}
-
 /* shared items */
 .shared-items{
     width: 100%;
@@ -118,6 +18,7 @@ body{
     grid-template-rows: 1fr 1fr 1fr;
     gap:20px;
 }
+
 .item{
     width: 100%;
     /* margin: 10px 0px 0px; */
@@ -126,6 +27,12 @@ body{
     display: flex;
     margin:0px 10px 0px 10px;
 }
+
+.image{
+	height:4rem;
+	width:4rem;
+}
+
 .item-category{
     color: #566c63;
     text-decoration: none;
@@ -156,30 +63,5 @@ body{
     text-decoration: none; color: #495c54; cursor: pointer;
 }
 .shared-to:hover{
-    text-decoration: underline;
-}
-
-/* footer */
-.footer{
-    width: 100%;
-    height: 100px;
-    background-color: #e2f6ee;
-    color: #495c54;
-    text-align: center;
-    padding: 15px;
-    font-size: 14px;
-}
-.footer a {
-    color: #495c54;
-    text-decoration: none;
-    margin: 0 10px;
-}
-
-.footer-logo{
-    height: 1rem;
-    width: 1rem;
-}
-
-.footer a:hover {
     text-decoration: underline;
 }
